# ForkForge

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  personal_learning.md  todays_tasks.md
crates/api/: Cargo.toml
crates/api/src/: github.rs  http_client.rs  server.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  client_config.rs  github.rs
crates/cli/src/infrastructure/: http_client.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  github.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs  repositories.rs
crates/domain/src/models/: auth.rs  mod.rs  session.rs  snapshot.rs  subscription.rs  user.rs
crates/domain/src/services/: http.rs  http_service.rs  mod.rs  sessions.rs
crates/domain/src/services/auth/: github.rs  internal_api.rs  mod.rs  token_service.rs  types.rs
crates/domain/src/services/billing/: mod.rs  payment_processor.rs  stripe_client.rs  webhooks.rs
crates/domain/src/services/forking/: mod.rs
crates/domain/src/services/snapshots/: mod.rs
crates/forkforge-api/: Cargo.toml
crates/forkforge-api/src/: github.rs  server.rs
crates/forkforge-cli/: Cargo.toml
crates/forkforge-cli/src/: client.rs  github.rs
crates/forkforge-config/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: db.rs  github.rs  github_device_flow.rs  helius.rs  http.rs  lib.rs  stripe.rs
docs/: architecture.md  database-migrations.md  development-guide.md  domain-services.md
forkforge-api/: Cargo.toml
forkforge-api/src/: github.rs  main.rs
forkforge-bruno/: bruno.json  github-login.bru  health.bru
forkforge-cli/: Cargo.toml
forkforge-cli/src/: github.rs  main.rs
forkforge-config/: Cargo.toml
forkforge-config/src/: lib.rs
forkforge-models/: Cargo.toml
forkforge-models/src/: github.rs
migrations/: 20250113_000001_init_schema.sql  20250126_000001_initial_auth_schema.sql  20250716_000003_add_github_auth.sql  20250721_000004_stripe_improvements.sql
xtask/src/: main.rs
