[workspace]
members = ["forkforge-cli", "forkforge-api", "forkforge-config", "forkforge-models"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["rt", "full", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
