[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"
