[package]
name = "forkforge-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
forkforge-config = { path = "../forkforge-config" }
hmac = "0.12.1"
serde = { workspace = true }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { workspace = true }
