[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/server.rs"

[[bin]]
name = "db-init"
path = "src/bin/db_init.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
common = { path = "../common" }
domain = { path = "../domain" }
hmac = "0.12.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { workspace = true }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "migrate",
] }
tokio = { workspace = true }
