[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/server.rs"

[[bin]]
name = "db-init"
path = "src/bin/db_init.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
async-trait = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
common = { path = "../common" }
domain = { path = "../domain" }
infra = { path = "../infra" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }
