[package]
name = "cli"
version = "0.1.0"
edition = "2024"
description = "Open-source Rust CLI for creating state-accurate Solana mainnet forks in <10s with account cloning, time-travel snapshots, and integrated debugging"
authors = ["Ross Nkama <ross@dedsol.xyz>"]

[[bin]]
name = "cli"
path = "src/client.rs"

[dependencies]
async-trait = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
domain = { path = "../domain" }
infra = { path = "../infra" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
urlencoding = "2.1"
tokio = { workspace = true }
open = "5.3"
qr2term = "0.3"
colored = "3.0"
arboard = "3.6"
