[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
uuid = { version = "1.17", features = ["v4", "serde"] }

# Domain specific dependencies that will be needed
url = "2.5"
sha2 = "0.10"
